app-ols-integration/main/default/objects/OLS_Cron_Job_Detail__mdt/OLS_Cron_Job_Detail__mdt.object-meta.xml
<CustomObject>
    <description>Cron job details for OLS to easily adjust cron job details in production since both jobs are in an unlocked package and are self scheduled within the package.

This is specifically for the Bounce Back Report and Email Validation jobs. Contains the job name, cron expression and &quot;minutes from now&quot; for dev purposes.

If someone needs to change when these job runs simply change the expression here and delete the current job.</description>
    <label>OLS Cron Job Detail</label>
    <pluralLabel>OLS Cron Job Details</pluralLabel>
</CustomObject>