app-ols-integration/main/default/objects/OLS_Cron_Job_Detail__mdt/fields/Cron_Expression__c.field-meta.xml
<CustomField>
    <fullName>Cron_Expression__c</fullName>
    <description>In production this is the cron expression for when the OLS integration Salesforce application schedules a job  programmatically.</description>
    <inlineHelpText>In production this is the cron expression for when the OLS integration Salesforce application schedules a job  programmatically.</inlineHelpText>
    <label>Cron Expression</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>