app-ols-integration/main/default/objects/OLS_Cron_Job_Detail__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of this Cron Job Detail.</description>
    <inlineHelpText>Description of this Cron Job Detail.</inlineHelpText>
    <label>Description</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>