app-ols-integration/main/default/objects/OLS_Cron_Job_Detail__mdt/fields/Job_Name__c.field-meta.xml
<CustomField>
    <fullName>Job_Name__c</fullName>
    <description>The name that will show up as the Job Name in the list of scheduled apex jobs.</description>
    <inlineHelpText>The name that will show up as the Job Name in the list of scheduled apex jobs.</inlineHelpText>
    <label>Job Name</label>
    <length>125</length>
    <required>true</required>
    <type>Text</type>
</CustomField>