app-ols-integration/main/default/objects/OLS_Cron_Job_Detail__mdt/fields/Minutes_From_Now__c.field-meta.xml
<CustomField>
    <fullName>Minutes_From_Now__c</fullName>
    <description>In development orgs this will be how many minutes for now the job should run when created by the OLS integration salesforce application.</description>
    <inlineHelpText>In development orgs this will be how many minutes for now the job should run when created by the OLS integration salesforce application.</inlineHelpText>
    <label>Minutes From Now</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>